syntax = "proto3";

package userService;

option go_package = "./proto;userservice";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

service UserService {
	// GetUserProfile return a profile of a user
	rpc GetUser(getUserRequest) returns (User){}

	// CreateUser create a user into database
	rpc CreateUser(createUserRequest) returns (User){}

	// DeleteUser delete user from database
	rpc DeleteUser(deleteUserRequest) returns (google.protobuf.Empty){}
}

message getUserRequest{
	string id = 1;
}

message deleteUserRequest{
	string id = 1;
}

message createUserRequest{
	User user = 1;
}

message User {
	string id = 1;  // unique generated uuid
	string name = 3 [
		(validate.rules).string={min_len: 1 max_len: 100}
	];
	string user_name = 4; // unique username of user
	string email = 5 [
		(validate.rules).string.min_len = 0,
		(validate.rules).string.email= true
	];
	string phone_number = 6 ;  // phone number of user
	string profile_pic_url = 7 ;
	google.protobuf.Timestamp created_on = 8;
}